--- a/primeiro-projeto/src/app/cursos/cursos.component.html
+++ b/primeiro-projeto/src/app/cursos/cursos.component.html
@@ -1,3 +1,11 @@
 <p>
-  cursos component!
+  Lista de cursos do portal {{ nomePortal }}!
 </p>
+
+<app-curso-detalhe></app-curso-detalhe>
+
+<ul>
+  <li *ngFor="let item of cursos">
+    {{ item }}
+  </li>
+</ul>
