continuação da brincandeira com diretivas

--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -18,8 +18,12 @@
   </li>
 </ul> -->
 
-<div style="text-align: center">
+<div>
   <!-- <app-diretiva-ngif></app-diretiva-ngif> -->
-  <app-diretiva-ngswitch></app-diretiva-ngswitch>
+  <!-- <app-diretiva-ngswitch>Loading ...</app-diretiva-ngswitch> -->
+  <!-- <app-diretiva-ngfor></app-diretiva-ngfor> -->
+  <!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
+  <!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
+  <app-operador-elvis></app-operador-elvis>
 </div>
 
