--- a/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
+++ b/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
@@ -40,3 +40,15 @@
 </div>
 
 <br>
+
+<h5>Removendo o "*" e usando template</h5>
+
+<template [ngIf]="mostrarCursos">
+  <div>Lista de cursos aqui.</div>
+</template>
+
+<div template="ngIf mostrarCursos">
+  Lista de cursos vazia.
+</div>
+
+<br/>
