--- a/diretivas/src/app/diretiva-ngswitch/diretiva-ngswitch.component.html
+++ b/diretivas/src/app/diretiva-ngswitch/diretiva-ngswitch.component.html
@@ -1,18 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" >Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item" [class.active]="aba == 'home'">
-        <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item" [class.active]="aba == 'home'" >
+        <a class="nav-link" (click)="aba = 'home'">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item" [class.active]="aba == 'features'">
-        <a class="nav-link">Features</a>
+        <a class="nav-link" (click)="aba = 'features'">Features</a>
       </li>
       <li class="nav-item" [class.active]="aba == 'pricing'">
-        <a class="nav-link">Pricing</a>
+        <a class="nav-link" (click)="aba = 'pricing'">Pricing</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -20,3 +20,10 @@
     </ul>
   </div>
 </nav>
+
+<br>
+<div class="container" [ngSwitch]="aba">
+  <p *ngSwitchCase="'features'">Modo Features ativado</p>
+  <p *ngSwitchCase="'pricing'">Modo Pricing ativado</p>
+  <p *ngSwitchDefault>Modo Home ativado</p>
+</div> 
