começando a usar diretivas

--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -24,6 +24,31 @@
   <!-- <app-diretiva-ngfor></app-diretiva-ngfor> -->
   <!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
   <!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
-  <app-operador-elvis></app-operador-elvis>
+  <!-- <app-operador-elvis></app-operador-elvis> -->
+  <!-- <app-exemplo-ng-content>
+
+    Exempplo para usar a tag <ng-content> passando dados do compente para o filho
+    Contéudo passado para o componente.
+    <app-operador-elvis></app-operador-elvis>
+
+  </app-exemplo-ng-content> -->
+
+  <!-- <app-exemplo-ng-content>
+
+    Exempplo para usar a tag <ng-content> passando dados do compente para o filho
+    <div class="titulo">
+      Título o painel
+    </div>
+    <div class="corpo">
+        Contéudo passado para o componente.
+        <app-operador-elvis></app-operador-elvis>
+    </div>
+    <div class="corpo">
+        Contéudo passado para o componente 2.
+        <app-operador-elvis></app-operador-elvis>
+    </div>
+  </app-exemplo-ng-content> -->
+
+  <app-diretivas-customizadas></app-diretivas-customizadas>
 </div>
 
