--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -18,4 +18,16 @@
   </li>
 </ul> -->
 
-<router-outlet></router-outlet>
+<nav>
+  <div class="nav-wrapper">
+    <a routerLink="" class="brand-logo right">Rotas NG Materialize</a>
+    <ul id="nav-mobile" class="left hide-on-med-and-down">
+      <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
+      <li routerLinkActive="active"><a routerLink="/cursos">Cursos</a></li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
