--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -24,10 +24,14 @@
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
       <li routerLinkActive="active"><a routerLink="/cursos">Cursos</a></li>
+      <li routerLinkActive="active"><a [routerLink]="['curso', idCurso.value]">Curso com id</a></li>
     </ul>
   </div>
 </nav>
 
 <div class="container">
+  <p>Entre com o id do curso</p>
+  <input #idCurso type="text" name="" value="">
+  <br/>
   <router-outlet></router-outlet>
 </div>
