trabalhando com rota 20190318

--- a/rotas/src/app/curso-detalhe/curso-detalhe.component.html
+++ b/rotas/src/app/curso-detalhe/curso-detalhe.component.html
@@ -1,3 +1,5 @@
 <p>
   curso-detalhe works! Id: {{ id }}
 </p>
+<!-- Usado o "?"(operador elves para caso seja nulo a variavel curso não abendar por nullpointer) -->
+<p>Curso: {{ curso?.nome }}</p>
