--- a/rotas/src/app/cursos/cursos.component.html
+++ b/rotas/src/app/cursos/cursos.component.html
@@ -1,3 +1,14 @@
 <p>
   cursos works!
 </p>
+<p>Página: {{ pagina }}</p>
+<div class="collection">
+  <a class="collection-item" *ngFor="let curso of cursos" [routerLink]="['/curso', curso.id]"> {{ curso.nome }} </a>
+  <!-- <a href="#!" class="collection-item">Alvin</a>
+  <a href="#!" class="collection-item active">Alvin</a>
+  <a href="#!" class="collection-item">Alvin</a>
+  <a href="#!" class="collection-item">Alvin</a> -->
+</div>
+
+<br/>
+<button (click)="proximaPagina()" class="btn">Próxima Página</button>
