--- a/rotas/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
+++ b/rotas/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
@@ -1,3 +1,9 @@
 <p>
-  aluno-detalhe works!
+  Detalhe do aluno
 </p>
+
+<p>Id: {{ aluno.id }}</p>
+<p>Nome: {{ aluno.nome }}</p>
+<p>E-mail: {{ aluno.email }}</p>
+
+<a class="waves-effect waves-light btn" (click)="editarContato()">Editar</a>
