--- a/rotas/src/app/alunos/aluno-form/aluno-form.component.html
+++ b/rotas/src/app/alunos/aluno-form/aluno-form.component.html
@@ -1,3 +1,25 @@
 <p>
   aluno-form works!
 </p>
+<div class="row">
+    <div class="col s12">
+      <div class="row">
+          <div class="input-field col s12">
+            <input disabled [(ngModel)]="aluno.id" id="disabled" type="text">
+            <label for="disabled">#</label>
+          </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="nome" [(ngModel)]="aluno.nome" class="validate">
+          <label for="nome" class="active">Nome</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="email" [(ngModel)]="aluno.email" type="email" class="validate">
+          <label for="email">E-mail</label>
+        </div>
+      </div>
+    </div>
+  </div>
