ajustando rotas filhas por error na verificação de comparação de valores.

--- a/rotas/src/app/alunos/alunos.component.html
+++ b/rotas/src/app/alunos/alunos.component.html
@@ -4,9 +4,12 @@
       Lista de Alunos
     </p>
     <div class="collection">
-      <a class="collection-item"
-      *ngFor="let aluno of alunos"
-      [routerLink]="[aluno.id]" >{{ aluno.nome }}</a>
+      <a
+        class="collection-item"
+        *ngFor="let aluno of alunos"
+        [routerLink]="[aluno.id]" >
+          {{ aluno.nome }} / {{ aluno.id }}
+      </a>
     </div>
   </div>
 
