--- a/rotas/src/app/alunos/aluno-form/aluno-form.component.html
+++ b/rotas/src/app/alunos/aluno-form/aluno-form.component.html
@@ -5,7 +5,7 @@
     <div class="col s12">
       <div class="row">
           <div class="input-field col s12">
-            <input disabled [(ngModel)]="aluno.id" id="disabled" type="text">
+            <input disabled [(ngModel)]="aluno.id" type="text">
             <label for="disabled">#</label>
           </div>
       </div>
