--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -17,8 +17,7 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul> -->
-
-<nav>
+<nav  *ngIf="mostrarMenu">
   <div class="nav-wrapper">
     <a routerLink="" class="brand-logo right">Rotas NG Materialize</a>
     <ul id="nav-mobile" class="left hide-on-med-and-down">
@@ -30,9 +29,10 @@
   </div>
 </nav>
 
-<div class="container">
-  <!-- <p>Entre com o id do curso</p>
-  <input #idCurso type="text" name="" value="">
-  <br/> -->
-  <router-outlet></router-outlet>
-</div>
+
+  <div class="container">
+    <!-- <p>Entre com o id do curso</p>
+    <input #idCurso type="text" name="" value="">
+    <br/> -->
+    <router-outlet></router-outlet>
+  </div>
