--- a/rotas/src/app/cursos/cursos.component.html
+++ b/rotas/src/app/cursos/cursos.component.html
@@ -3,7 +3,11 @@
 </p>
 <p>Página: {{ pagina }}</p>
 <div class="collection">
-  <a class="collection-item" *ngFor="let curso of cursos" [routerLink]="['/curso', curso.id]"> {{ curso.nome }} </a>
+  <a class="collection-item"
+    *ngFor="let curso of cursos"
+    [routerLink]="['/cursos', curso.id]">
+      {{ curso.nome }}
+  </a>
   <!-- <a href="#!" class="collection-item">Alvin</a>
   <a href="#!" class="collection-item active">Alvin</a>
   <a href="#!" class="collection-item">Alvin</a>
