--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -22,6 +22,7 @@
     <a class="brand-logo right">Rotas NG Materialize</a>
     <ul class="left hide-on-med-and-down">
       <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
+      <li routerLinkActive="active"><a routerLink="/">Home</a></li>
       <li routerLinkActive="active"><a routerLink="/cursos" [queryParams]="{pagina:1}">Cursos</a></li>
       <!--li routerLinkActive="active"><a [routerLink]="['curso', idCurso.value]">Curso com id</a></li-->
       <li routerLinkActive="active"><a routerLink="/alunos">Alunos</a></li>
